<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgblue"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imgOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        app:srcCompat="@drawable/options" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/option"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNotepad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutlight_bg"
            android:text="@string/notepad" />

        <Button
            android:id="@+id/btnCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/layoutlight_bg"
            android:text="@string/calendar" />

        <Button
            android:id="@+id/btnTaskManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/layoutlight_bg"
            android:text="@string/taskmanager" />

        <Button
            android:id="@+id/btnSceneGenerator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/layoutlight_bg"
            android:text="@string/scenegenerator" />

        <Button
            android:id="@+id/btnVoiceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/layoutlight_bg"
            android:text="@string/voicelist" />
    </LinearLayout>

</RelativeLayout>