<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/bgblue"
android:padding="20dp"
tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/left" />

    </LinearLayout>

    <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:fontFamily="sans-serif-black"
    android:gravity="center"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="30sp"
    android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/forgotpassword"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_bg"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/email"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llusername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/imgPassEye"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignBottom="@+id/edtForgotPassword"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/eye" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llemail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/layoutdark_bg"
        android:text="@string/resetpassword"
        android:textColor="@color/white" />


</RelativeLayout>