<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SceneGeneratorActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/previous" />

        <TextView
            android:id="@+id/txtAddNewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/scene_generator"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llHeader"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/scene_generator_picker"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/your_next_task_is"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtoutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/bgblue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtTaskValue"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@+id/txtoutput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/layoutlight_bg"
        android:ems="10"
        android:hint="@string/add_a_task"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imgAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextTextPersonName"
        android:layout_alignBottom="@id/edtTaskValue"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/edtTaskValue"
        app:srcCompat="@drawable/add" />

    <LinearLayout
        android:id="@+id/llbtns"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edtTaskValue"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPickTask"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutorange_bg"
            android:text="@string/pick_a_task"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layouttransparent_bg"
            android:text="reset"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTaskList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llbtns"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp" />
</RelativeLayout>